--- a/.github/workflows/dockerhub-publish.yml
+++ b/.github/workflows/dockerhub-publish.yml
@@ -1,7 +1,7 @@
 name: Publish Image to Dockerhub
 on:
   release:
-    [published]
+    types: [published]
 jobs:
   push_to_registry:
     runs-on: ubuntu-latest
