build: manual workflow dispatch for publish image

--- a/.github/workflows/dockerhub-publish.yml
+++ b/.github/workflows/dockerhub-publish.yml
@@ -2,6 +2,7 @@ name: Publish Image to Dockerhub
 on:
   release:
     types: [published]
+  workflow_dispatch:
 jobs:
   push_to_registry:
     runs-on: ubuntu-latest
