--- a/.github/workflows/dockerhub-publish.yml
+++ b/.github/workflows/dockerhub-publish.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: checkout repository
-      uses: action/checkout@v4
+      uses: actions/checkout@v4
     - name: dockerhub login
       uses: docker/login-action@v3
       with:
